@@ -1,7 +1,6 @@
 package greencity.mapping;
 
 import static greencity.ModelUtils.*;
-import static greencity.ModelUtils.getHabitAssignForMapper;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import greencity.dto.habit.HabitAssignDto;
@@ -23,7 +22,7 @@ class HabitAssignMapperTest {
         HabitAssignDto habitAssignDto = getFullHabitAssignDto();
         HabitAssign convert = habitAssignMapper.convert(habitAssignDto);
         HabitAssign habitAssignForMapper = getHabitAssignForMapper();
-        habitAssignForMapper.getUserShoppingListItems().get(0).setStatus(ShoppingListItemStatus.INPROGRESS);
+        habitAssignForMapper.getUserShoppingListItems().getFirst().setStatus(ShoppingListItemStatus.INPROGRESS);
         assertEquals(habitAssignForMapper, convert);
 
     }
